Unified date display, adjusted for user time zone

--- a/force-app/main/default/classes/SummitEventsShared.cls
+++ b/force-app/main/default/classes/SummitEventsShared.cls
@@ -304,24 +304,27 @@ public with sharing class SummitEventsShared {
 
     public String navBreadcrumbBuilder(Summit_Events_Instance__c eventInstance) {
         String instanceDate = '';
-        Time noTime = Time.newInstance(0, 0, 0, 0);
+
         if (eventInstance.Instance_Start_Date__c != null && eventInstance.Instance_End_Date__c != null) {
-            Datetime convertedStartDate = Datetime.newInstanceGmt(
-                    eventInstance.Instance_Start_Date__c.year(),
-                    eventInstance.Instance_Start_Date__c.month(),
-                    eventInstance.Instance_Start_Date__c.day(),
-                    noTime.hour(),
-                    noTime.minute(),
-                    noTime.second()
+            //Get timezone to check if offset is not 0 (not GMT)
+            TimeZone tz = UserInfo.getTimeZone();
+            Integer timezoneOffset = tz.getOffset(Datetime.now());
+
+            Datetime convertedStartDate = Datetime.newInstance(
+                    eventInstance.Instance_Start_Date__c,
+                    eventInstance.Instance_Start_Time__c
             );
             Datetime convertedEndDate = Datetime.newInstanceGmt(
-                    eventInstance.Instance_End_Date__c.year(),
-                    eventInstance.Instance_End_Date__c.month(),
-                    eventInstance.Instance_End_Date__c.day(),
-                    noTime.hour(),
-                    noTime.minute(),
-                    noTime.second()
+                    eventInstance.Instance_End_Date__c,
+                    eventInstance.Instance_End_Time__c
             );
+
+            //If the user is logged in and offset for user is not GMT than adjust datetime to act like GMT by removing the offset
+            if (timezoneOffset != 0) {
+                convertedStartDate = convertedStartDate.addSeconds(-(timezoneOffset) / 1000);
+                convertedEndDate = convertedEndDate.addSeconds(-(timezoneOffset) / 1000);
+            }
+
             String monthStart = convertedStartDate.format('MMMM');
             String monthEnd = convertedEndDate.format('MMMM');
             String yearStart = String.valueOf(eventInstance.Instance_Start_Date__c.year());
